feat: add Hero block

--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,5 @@
 @import url(../blocks/page.css);
 @import url(../blocks//main-content.css);
 
+@import url(../blocks/hero.css);
 @import url(../blocks/header.css);
