--- a/pages/index.css
+++ b/pages/index.css
@@ -2,8 +2,10 @@
 
 @import url(../vendor/fonts/fonts.css);
 
-@import url(../blocks/page.css);
 @import url(../blocks//main-content.css);
+@import url(../blocks/page.css);
 
 @import url(../blocks/hero.css);
 @import url(../blocks/header.css);
+
+@import url(../blocks/ourspace.css);
