--- a/blocks/hero.css
+++ b/blocks/hero.css
@@ -59,4 +59,6 @@
   object-position: center;
   width: 100%;
   height: 566px;
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15);
+  vertical-align: bottom;
 }
