--- a/blocks/ourspace.css
+++ b/blocks/ourspace.css
@@ -153,3 +153,36 @@
   left: 0;
   bottom: 0;
 }
+
+.loader {
+  width: 160px;
+  margin: 0 auto;
+}
+
+.loader__line {
+  width: 100%;
+  height: 4px;
+  background-color: #dfdfdf;
+  margin-bottom: 7px;
+}
+
+.loader__line div {
+  width: 25%;
+  height: 100%;
+  background-color: #dd2c00;
+}
+
+.loader__count {
+  width: 100%;
+  font-family: "Lato", serif;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 400;
+  font-style: normal;
+  color: #9a9a9a;
+  text-align: center;
+}
+
+.loader__count span {
+  color: #222831;
+}
