--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,9 @@
 @import url(../blocks//main-content.css);
 @import url(../blocks/page.css);
 
+@import url(../blocks/title-line.css);
 @import url(../blocks/hero.css);
 @import url(../blocks/header.css);
 
+@import url(../blocks/buttons-slider.css);
 @import url(../blocks/ourspace.css);
