--- a/pages/index.css
+++ b/pages/index.css
@@ -3,13 +3,17 @@
 @import url(../vendor/fonts/fonts.css);
 
 @import url(../blocks//main-content.css);
+@import url(../blocks/user-block.css);
+@import url(../blocks/title-line.css);
+@import url(../blocks/buttons-slider.css);
+@import url(../blocks/button-naked.css);
+@import url(../blocks/news-card.css);
+
 @import url(../blocks/page.css);
 
-@import url(../blocks/title-line.css);
 @import url(../blocks/hero.css);
 @import url(../blocks/header.css);
 
-@import url(../blocks/buttons-slider.css);
 @import url(../blocks/ourspace.css);
 
 @import url(../blocks/whyfrispes.css);
@@ -21,5 +25,7 @@
 @import url(../blocks/reviews.css);
 
 @import url(../blocks/faq.css);
+
+@import url(../blocks/insights.css);
 
 @import url(../blocks/footer.css);
