--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,8 @@
 
 @import url(../blocks/facilites.css);
 
+@import url(../blocks/gallery.css);
+
 @import url(../blocks/uses.css);
 
 @import url(../blocks/reviews.css);
