--- a/blocks/faq.css
+++ b/blocks/faq.css
@@ -43,6 +43,10 @@
   text-align: center;
 }
 
+.faq__subtitle_color_white {
+  color: white;
+}
+
 .faq__rectangle {
   width: 64px;
   height: 48px;
